<resources>
    <string name="app_name">DesignLayoutWork</string>
    <string name="button">Button</string>
    <string name="set_view_height">Set view height</string>
    <string name="just_item">Just item</string>
    <string name="some_name">Some name</string>
    <string name="last_day">last day</string>
    <string name="follow">+ Follow</string>
    <string name="recommended_by">Recommended by :</string>
    <string name="users">** / ** users</string>
    <string name="some_grade">*.***</string>
    <string name="some_comment">***</string>
    <string name="some_likes">***</string>
    <string name="days_ago">Days Ago</string>
    <string name="users_rec">users</string>
</resources>