<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@color/blue"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.68"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"/>

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_green"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toBottomOf="@id/mainImage"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:theme="@style/ToolBarStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:paddingHorizontal="16dp"
        app:layout_constraintVertical_bias="0.69"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/personGirlIcon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@color/green"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.28"
        app:roundPercent="1"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/personsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/some_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toEndOf="@+id/personGirlIcon"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="personsName,personGirlIcon,follow" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="personsName,personGirlIcon,follow" />

    <TextView
        android:id="@+id/lastVisitDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_day"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@+id/personsName"
        app:layout_constraintBottom_toTopOf="@+id/barrierBottom"
        app:layout_constraintStart_toEndOf="@+id/personGirlIcon"/>

    <Button
        android:id="@+id/follow"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/orange"
        app:layout_constraintTop_toTopOf="@id/barrierTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrierBottom"/>

    <View
        android:id="@+id/borderBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommended_by"
        android:textColor="@color/gray"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/borderBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/recUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users"
        android:textColor="@color/gray"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="@id/borderBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recommended"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="frameLayout,eye,grade,comment,amountReviews,favorites, amountLikes"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/recommended"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:roundPercent="1"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/green"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:roundPercent="1"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:roundPercent="1"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/green"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:roundPercent="1"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/ic5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:alpha="0.3"
            android:background="@color/gray"
            android:layout_marginStart="68dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:roundPercent="1"/>

        <TextView
            android:id="@+id/yetUsersAmount"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:textSize="11sp"
            android:textColor="@color/white"
            android:layout_marginStart="68dp"
            app:layout_constraintTop_toBottomOf="@+id/mainImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </FrameLayout>

    <ImageView
        android:id="@+id/eye"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_visibility_24"
        android:layout_marginEnd="2dp"
        app:tint="@color/gray"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/grade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalGuideLine"/>

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/some_grade"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintStart_toEndOf="@id/eye"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leftSpace"/>

    <Space
        android:id="@+id/leftSpace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/grade"/>

    <ImageView
        android:id="@+id/comment"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_mode_comment_24"
        android:layout_marginEnd="2dp"
        app:tint="@color/gray"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/amountReviews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/leftSpace"/>

    <TextView
        android:id="@+id/amountReviews"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/some_comment"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/rightSpace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/comment"/>

    <Space
        android:id="@+id/rightSpace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/amountReviews"/>

    <ImageView
        android:id="@+id/favorites"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_favorite_24"
        android:layout_marginEnd="2dp"
        app:tint="@color/gray"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toStartOf="@id/amountLikes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rightSpace"/>

    <TextView
        android:id="@+id/amountLikes"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:text="@string/some_likes"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/barrierFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/favorites"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>